[package]
name = "jgbemu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
pixels = "0.13"
rand = "0.8"
env_logger = "0.10"
winit = "0.28"
winit_input_helper = "0.14"
error-iter = "0.4"
log = "0.4"